--- a/src/main/resources/static/css/main-left.css
+++ b/src/main/resources/static/css/main-left.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
 
-.main{
-	display:flex;
 
-}
 
 .main-left{
-	min-height:93vh;
+	min-height:100vh;
 	width:20%;
 	background-color:gray;
 	border-right:1px solid white;
+	position:fixed;
+	display:none;
+
 }
 
 .userdatas{
