--- a/src/main/resources/templates/register_task.html
+++ b/src/main/resources/templates/register_task.html
@@ -10,21 +10,10 @@
     <link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body>
-	<header>
-    	<div th:replace="header"></div>
-    </header>
+    <div th:include="header"></div>
 
 	<div class="main">
-	    <div class="main-left">
-		    <div class="userdatas">
-				<h1 class="userdata">Y&I Group</h1>
-				<h1 class="userdata">蛭間寛太</h1>
-		    </div>
-			<div class="list"  th:object="${mini_projexts}">
-				<h1 class="list-title">プロジェクトA</h1>
-				<p  th:each="mini_project:${mini_projects}"><a th:text="${mini_project.mini_project_title}" class="list-name" th:href="@{/{project_id}/project_detail/{mini_project_id} (project_id=1,mini_project_id=${mini_project.id})}"></a></p>
-			</div>
-	    </div>
+	    <div th:include="main-left"></div>
 		<div class="main-right" th:object="${mini_project}">
 			<h1 class="page-title">タスク追加</h1>
 			<form class="form" th:action="@{/{project_id}/{mini_project_id}/registerTask(project_id=1, mini_project_id=${mini_project.id})}" method ="post" th:object="${taskBean}">
