--- a/src/main/resources/templates/update_task.html
+++ b/src/main/resources/templates/update_task.html
@@ -10,20 +10,9 @@
     <link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body th:object="${msg}">
-	<header>
-    	<div th:replace="header"></div>
-    </header>
+    <div th:include="header"></div>
 	<div class="main">
-	    <div class="main-left">
-		    <div class="userdatas">
-				<h1 class="userdata">Y and I Group</h1>
-				<h1 class="userdata">蛭間寛太</h1>
-		    </div>
-		    <div class="list"  th:object="${mini_projexts}">
-				<h1 class="list-title">プロジェクトA</h1>
-				<p  th:each="mini_project:${mini_projects}"><a th:text="${mini_project.mini_project_title}" class="list-name"  th:href="@{/{project_id}/project_detail/{mini_project_id} (project_id=1,mini_project_id=${mini_project.id})}"></a></p>
-			</div>
-	    </div>
+		<div th:include="main-left"></div>
 		<div class="main-right" th:object="${mini_project}">
 			<h1 class="page-title">タスク詳細／更新</h1>
 			<form class="form" th:object="${task}" th:action="@{/{project_id}/{mini_project_id}/updateTask/{task_id}(project_id=1,mini_project_id=${mini_project.id},task_id=${task.id})}" method ="post">
