--- a/src/main/resources/templates/userRegistration.html
+++ b/src/main/resources/templates/userRegistration.html
@@ -3,42 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/header.css}">
+<link rel="stylesheet" th:href="@{/css/main-left.css}">
+<link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body>
-	<h1>従業員登録</h1>
-		<form th:action="@{/userRegistration}" method="post" th:object="${userRegistrationBean}">
-			<label for="username">Username</label>
-			<input type="text" th:field="*{username}"><br/>
+	<div th:include="header"></div>
+	<h1 class="page-title">従業員登録</h1>
+		<form class="form" th:action="@{/userRegistration}" method="post" th:object="${userRegistrationBean}">
 			<div th:if="${duplicateError}">
 				<span th:text="${duplicateError}"></span>
 			</div>
-			<div th:if="${#fields.hasErrors('username')}">
-				<span th:errors="*{username}"></span>
-			</div>
 
-			<label for="password">Password</label>
-			<input type="password" th:field="*{password}"><br/>
-			<div th:if="${#fields.hasErrors('password')}">
-				<span th:errors="*{password}"></span>
-			</div>
+			<label class="form-title" for="username">ユーザー名</label>
+			<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+			<input class="form-input" type="text" th:field="*{username}"><br/>
 
-			<label for="password">Password_Conf</label>
-			<input type="password" th:field="*{password_conf}"><br/>
-			<div th:if="${#fields.hasErrors('passwordConfirmed')}">
-				<span th:errors="*{passwordConfirmed}"></span>
-			</div>
+			<label class="form-title" for="password">パスワード </label>
+			<span  th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+			<input class="form-input"  type="password" th:field="*{password}"><br/>
 
-			<label for="company"> 企業</label>
-			<select th:field="*{company_id}">
-				<option value=1>Y%I Group</option>
-			</select><br/>
-			<div th:if="${#fields.hasErrors('company_id')}">
-				<span th:errors="*{company_id}"></span>
-			</div>
+			<label class="form-title" for="password">パスワード再入力</label>
+			<span  th:if="${#fields.hasErrors('passwordConfirmed')}"th:errors="*{passwordConfirmed}"></span>
+			<input class="form-input"  type="password" th:field="*{password_conf}"><br/>
 
+			<label class="form-title" for="company"> 企業</label>
+			<select class="form-input" th:field="*{company_id}">
+				<option th:value="1">Y%I Group</option>
+			</select>
+			<br/>
 
-			<input type="submit" value="Register">
+			<input class="form-input submit-button" type="submit" value="登録">
 		</form>
-		<a th:href="@{/login}"> ログイン</a>
+		<a class="link" th:href="@{/login}"> ログイン</a>
 </body>
 </html>
