--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -35,3 +35,10 @@ header {
   text-decoration: none;
   color:#fff;
 }
+
+.fas{
+	color:white;
+	cursor:pointer;
+	font-size:30px;
+	margin-right:20px;
+}
