--- a/src/main/resources/static/css/project_detail.css
+++ b/src/main/resources/static/css/project_detail.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 .main-right{
-	width:80%;
-	min-height:93vh;
+	width:100%;
+	min-height:150vh;
 /* 	padding:20px 10px; */
 }
 
 .project-titles{
-	padding:20px 0;
+	padding:20px 30px;
 	border-bottom:1px solid black;
 }
 
