--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/index.css}">
 <title>Insert title here</title>
 </head>
 <body>
+	<div  th:if="${user}">
+	    <div th:include="header"></div>
+	    <div class="main">
+	    	<div th:include="main-left"></div>
+	    </div>
+	</div>
 
+    <div th:unless="${user}" class ="before-login">
+		<div class="top-items">
+			<h1 class="top-title">Todo App</h1>
+			<p class="top-msg">社内のプロジェクト管理を一括管理</p>
+			<p class="top-msg">部門間での進捗確認も容易に！</p>
+		</div>
+	    <div class="links">
+			<a class="top-link" th:href="@{/userRegistration}"> ユーザー登録</a>
+			<a class="top-link" th:href="@{/login}">ログイン</a>
+	    </div>
+    </div>
 </body>
 </html>
