--- a/src/main/resources/templates/miniProjectList.html
+++ b/src/main/resources/templates/miniProjectList.html
@@ -5,55 +5,33 @@
 <link rel="stylesheet" th:href="@{/css/reset.css}">
 <link rel="stylesheet" th:href="@{/css/header.css}">
 <link rel="stylesheet" th:href="@{/css/main-left.css}">
-<link rel="stylesheet" th:href="@{/css/miniProjectList.css}">
+<link rel="stylesheet" th:href="@{/css/mini_project_list.css}">
 <title>Insert title here</title>
 </head>
 <body>
-	<header>
-    	<div th:replace="header"></div>
-    </header>
+    <div th:include="header"></div>
 
 	<div class="main">
-	    <div class="main-left">
-		    <div class="userdatas">
-				<h1 class="userdata">Y&I Group</h1>
-				<h1 class="userdata">蛭間寛太</h1>
-		    </div>
-			<div class="list">
-				<h1 class="list-title">プロジェクト一覧</h1>
-				<p><a class="list-name" href="#">プロジェクト名</a></p>
-				<p><a class="list-name" href="#">プロジェクト名</a></p>
-				<p><a class="list-name" href="#">プロジェクト名</a></p>
-				<p><a class="list-name" href="#">プロジェクト名</a></p>
-				<p><a class="list-name" href="#">プロジェクト名</a></p>
-			</div>
-	    </div>
+	    <div th:include="main-left"></div>
 		<div class="main-right">
-			<h1 class="mini-project-title">プロジェクト名＞ミニプロジェクト一覧</h1>
-			<form class="search-form" th:object="${mini_project}" th:action="@{/searchTask/{mini_project_id}(mini_project_id=${mini_project_id})}" method="post" >
+			<div class="project-titles" th:object="${mini_project}">
+				<h1 class="mini-project-title"><span th:object=${project} th:text=${project.project_name}></span></h1>
+				<a class="add-miniProject" th:href="@{/{project_id}/registerMiniProject(project_id=${project.id})}">追加</a>
+			</div>
+
+ 			<form class="search-form"  th:action="@{/searchMiniProject/{project_id}(project_id=${project_id})}" method="post" >
 				<label>絞り込み</label>
 				<input type="text" name="keyword">
-				<select name="status" />
-					<option value="100" selected="selected">ステータス</option>
-					<option value="0">保留</option>
-					<option value="1">開始前</option>
-					<option value="2">実行中</option>
-					<option value="3">完了</option>
-				</select>
-				<select name="priority">
-					<option value="100" selected="selected">優先度</option>
-					<option value="0">低</option>
-					<option value="1">中</option>
-					<option value="2">高</option>
+				<select name="user_id" />
+					<option value="100" selected="selected">ユーザー</option>
+					<option value="0">user</option>
+					<option value="1">user1</option>
 				</select>
 				<label>並び替え条件</label>
 				<select name="sort">
 					<option value="id">登録順</option>
-					<option value="status">ステータス</option>
-					<option value="priority">優先度</option>
-					<option value="started_date">開始日</option>
-					<option value="predict_finished_date">終了日</option>
-					<option value="required_time">所要日数</option>
+					<option value="mini_project_title">プロジェクト名順</option>
+					<option value="user_name">担当者</option>
 				</select>
 				<select name="order">
 					<option value="Asc">昇順</option>
@@ -61,6 +39,7 @@
 				</select>
 				<input type="submit" value="検索">
 			</form>
+
 			<table  border="1" class="mini-projects" th:object="${mini_projects}" >
 				<tr>
 					<th class="mini-project-list-title">ミニプロジェクト名</th>
@@ -72,10 +51,10 @@
 				<tr th:if="${mini_projects}" th:each="mini_project:${mini_projects}">
 					<td class="mini-project-list-name"><a th:text="${mini_project.mini_project_title}" th:href="@{/{project_id}/project_detail/{mini_project_id}(project_id=1, mini_project_id=${mini_project.id})}"></a></td>
 					<td class="mini-project-list-name">85%</td>
-					<td class="mini-project-list-name">金澤伸行</td>
-					<td class="mini-project-list-name"><a href="#">更新</a></td>
+					<td class="mini-project-list-name" th:text="${mini_project.username}"></td>
+					<td class="mini-project-list-name"><a th:href="@{/{project_id}/updateMiniProject/{mini_project_id}(project_id=${mini_project.project_id}, mini_project_id=${mini_project.id})}">更新</a></td>
 					<td class="mini-project-list-name">
-						<form th:action="@{/{project_id}/deleteMiniProjectList/{mini_project_id}(project_id=1, mini_project_id=${mini_project.id})}" method="post">
+						<form th:action="@{/{project_id}/deleteMiniProject/{mini_project_id}(project_id=${mini_project.project_id}, mini_project_id=${mini_project.id})}" method="post">
 							<input type="submit" value="削除">
 						</form>
 					</td>
