--- a/src/main/resources/templates/register_project.html
+++ b/src/main/resources/templates/register_project.html
@@ -35,14 +35,14 @@
 				<h1 class="page-title">プロジェクト追加</h1>
 				<form th:action="@{/registerProject}" method ="post" class="form">
 					<span class="form-title">プロジェクト名</span>
-					<input class="form-input" type="text" th:field="*{project_name}">
+					<input class="form-input" type="text" th:field="${projectBean.project_name}">
 					<br>
 					<!-- ラジオボタン -->
 					<div class="manager">
 						<span class="form-input" th:object="${users}">プロジェクトマネージャー</span>
 						<ul>
 						    <li th:each="user:${users}">
-						      <input type="radio" th:text="${user.username}" th:field="${projectBean.manager_id}" th:value=1>
+						      <input type="radio" th:text="${user.username}" th:field="${projectBean.manager_id}" th:value=${user.id}>
 						 	</li>
 						  </ul>
 					</div>
@@ -50,13 +50,13 @@
 					<div class="participant">
 						<span class="form-input" th:object="${users}">参加者</span>
 						<ul>
-							<li th:each="user:${users}">
-								<input type="checkbox" th:text="${user.username}" th:field="${projectBean.userList}" th:value=${user.id}>
+							<li th:object="${user_ids}" th:each="user:${users}">
+								<input type="checkbox" th:text="${user.username}" th:value=${user.id} th:field="${projectBean.user_list}">
 							</li>
 						</ul>
 					</div>
 					<br>
-					<input th:object="${now}" class="form-input submit-button" type="submit" value="登録">
+					<input class="form-input submit-button" type="submit" value="登録">
 				</form>
 		</div>
 	</div>
