--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 .main-right{
-	width:80%;
-	min-height:93vh;
+	width:100%;
+	min-height:150vh;
 }
 
 .page-title{
@@ -35,4 +35,5 @@
 }
 ul{
 	list-style: none;
+	display: flex;
 }
