--- a/src/main/resources/templates/project_list.html
+++ b/src/main/resources/templates/project_list.html
@@ -34,6 +34,7 @@
 		    	<div class="project-title">
 					<h1>プロジェクトリスト</h1>
 				</div>
+				<a class="add-project" th:href="@{/registerProject}">追加</a>
 			<!-- プロジェクト一覧 -->
 					<table border="1" class="projects" th:object="${projects}" th:if="${projects}">
 						<tr>
