--- a/src/main/resources/templates/project_list.html
+++ b/src/main/resources/templates/project_list.html
@@ -10,49 +10,44 @@
 <link rel="stylesheet" th:href="@{/css/header.css}">
 <link rel="stylesheet" th:href="@{/css/main-left.css}">
 <link rel="stylesheet" th:href="@{/css/projectList.css}">
+
 </head>
 <body>
-	<header>
-    	<div th:replace="header"></div>
-    </header>
-		<div class="main">
-			<div class="main-left">
-			    <div class="userdatas">
-					<h1 class="userdata">Y&I Group</h1>
-					<h1 class="userdata">蛭間寛太</h1>
-			    </div>
-				<div class="list">
-					<h1 class="list-title">プロジェクト一覧</h1>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
+   	<div th:include="header"></div>
+	<div class="main">
+		<div th:include="main-left"></div>
+	    <div class="main-right">
+			<a class="add-task" th:href="@{/{company_id}/registerProject(company_id=${1})}">プロジェクト追加</a>
+			<div class="projects">
+				<div class="project-block" th:object="${projects}" th:if="${projects}" th:each="project : ${projects}">
+					<a class="project-title" th:text="${project.project_name}" th:href="@{/miniProjectList/{project_id}(project_id=${project.id})}"></a>
+					<p class="project-manager"th:text="${project.user_name}"></p>
+					<div class="project-links">
+						<a class="project-link" th:href="@{/miniProjectList/{project_id}(project_id=${project.id})}">更新</a>
+						<form  th:action="@{/{company_id}/deleteProject/{project_id}(company_id=${project.company_id}, project_id=${project.id})}" method="post">
+							<input type="submit" value="削除">
+						</form>
+					</div>
 				</div>
-		    </div>
-		    <div class="main-right">
-		    	<div class="project-title">
-					<h1>プロジェクトリスト</h1>
-				</div>
-			<!-- プロジェクト一覧 -->
-					<table border="1" class="projects" th:object="${projects}" th:if="${projects}">
-						<tr>
-							<th class="project-list-title">No.</th>
-							<th class="project-list-title">プロジェクトのタイトル</th>
-							<th class="project-list-title">プロジェクトマネージャー</th>
-							<th class="project-list-title">会社名</th>
-							<th class="project-list-title">日付</th>
-						</tr>
-						<tr th:each="project : ${projects}">
-							<td class="project-list-name" th:text="${project.id}"></td>
-							<td class="project-list-name"><a th:text="${project.project_name}" th:href="@{/miniProjectList/${project.id}}"></a></td>
-							<td class="project-list-name" th:text="${project.user_name}"></td>
-							<td class="project-list-name" th:text="${project.company_name}"></td>
-							<td class="project-list-name" th:text="${project.created_at}"></td>
-						</tr>
-					</table>
-		    </div>
-
-		</div>
+			</div>
+		<!-- プロジェクト一覧 -->
+		<!-- 	<table border="1" class="projects" th:object="${projects}" th:if="${projects}">
+				<tr>
+					<th class="project-list-title">No.</th>
+					<th class="project-list-title">プロジェクトのタイトル</th>
+					<th class="project-list-title">プロジェクトマネージャー</th>
+					<th class="project-list-title">会社名</th>
+					<th class="project-list-title">日付</th>
+				</tr>
+				<tr th:each="project : ${projects}">
+					<td class="project-list-name" th:text="${project.id}"></td>
+					<td class="project-list-name"><a th:text="${project.project_name}" th:href="@{/miniProjectList/{project_id}(project_id=${project.id})}"></a></td>
+					<td class="project-list-name" th:text="${project.user_name}"></td>
+					<td class="project-list-name" th:text="${project.company_name}"></td>
+					<td class="project-list-name" th:text="${project.created_at}"></td>
+				</tr>
+			</table> -->
+	    </div>
+	</div>
 </body>
 </html>
