--- a/src/main/resources/templates/register_project.html
+++ b/src/main/resources/templates/register_project.html
@@ -7,40 +7,26 @@
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <title>プロジェクト登録</title>
 <link rel="stylesheet" th:href="@{/css/reset.css}">
-<link rel="stylesheet" th:href="@{/css/project.css}">
 <link rel="stylesheet" th:href="@{/css/reset.css}">
 <link rel="stylesheet" th:href="@{/css/header.css}">
 <link rel="stylesheet" th:href="@{/css/main-left.css}">
+<link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body>
-	<header>
-    	<div th:replace="header"></div>
-    </header>
+
+   	<div th:include="header"></div>
     <div class="main">
-	    <div class="main-left">
-			    <div class="userdatas">
-					<h1 class="userdata">Y&I Group</h1>
-					<h1 class="userdata">蛭間寛太</h1>
-			    </div>
-				<div class="list">
-					<h1 class="list-title">プロジェクト一覧</h1>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-					<p><a class="list-name" href="#">プロジェクト名</a></p>
-				</div>
-		    </div>
+	    <div th:include="main-left"></div>
 			 <div class="main-right" th:object="${projectBean}">
 				<h1 class="page-title">プロジェクト追加</h1>
-				<form th:action="@{/registerProject}" method ="post" class="form">
+				<form th:action="@{/{company_id}/registerProject(company_id=1)}" method ="post" class="form">
 					<span class="form-title">プロジェクト名</span>
 					<input class="form-input" type="text" th:field="${projectBean.project_name}">
 					<br>
 					<!-- ラジオボタン -->
 					<div class="manager">
-						<span class="form-input" th:object="${users}">プロジェクトマネージャー</span>
-						<ul>
+						<span class="form-title"  th:object="${users}">プロジェクトマネージャー</span>
+						<ul class="form-list">
 						    <li th:each="user:${users}">
 						      <input type="radio" th:text="${user.username}" th:field="${projectBean.manager_id}" th:value=${user.id}>
 						 	</li>
@@ -48,8 +34,8 @@
 					</div>
 					<!-- チェックボタン -->
 					<div class="participant">
-						<span class="form-input" th:object="${users}">参加者</span>
-						<ul>
+						<span class="form-title" th:object="${users}">参加者</span>
+						<ul  class="form-list">
 							<li th:object="${user_ids}" th:each="user:${users}">
 								<input type="checkbox" th:text="${user.username}" th:value=${user.id} th:field="${projectBean.user_list}">
 							</li>
