--- a/src/main/resources/static/css/projectList.css
+++ b/src/main/resources/static/css/projectList.css
@@ -13,6 +13,8 @@
 	font-size:30px;
 	border-bottom:1px solid black;
 	padding:20px 30px;
+	text-decoration:none;
+	color: black;
 }
 
 .add-project{
@@ -40,7 +42,6 @@
 	line-height:30px;
 	white-space: nowrap;
 }
-
 
 .font-black{
 	color:black;
