--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
 	    <div th:include="header"></div>
 	    <div class="main">
 	    	<div th:include="main-left"></div>
+	    	<div class="main-right"></div>
 	    </div>
 	</div>
 
