--- a/src/main/resources/templates/main-left.html
+++ b/src/main/resources/templates/main-left.html
@@ -13,9 +13,9 @@
 			<h1 class="userdata" th:text="${company.company_name}">Y&I Group</h1>
 			<h1 class="userdata" th:object="${user}" th:text="${user.username}">蛭間寛太</h1>
 	    </div>
-		<div class="list"  th:object="${mini_projects}">
+		<div class="list" th:object="${mini_projects}">
 			<h1 class="list-title">プロジェクトA</h1>
-			<p  th:each="mini_project:${mini_projects}"><a th:text="${mini_project.mini_project_title}" class="list-name"  th:href="@{/{project_id}/project_detail/{mini_project_id} (project_id=1,mini_project_id=${mini_project.id})}"></a></p>
+			<p  th:if="${mini_projects}" th:each="mini_project:${mini_projects}"><a th:text="${mini_project.mini_project_title}" class="list-name"  th:href="@{/{project_id}/project_detail/{mini_project_id} (project_id=${mini_project.project_id},mini_project_id=${mini_project.id})}"></a></p>
 		</div>
     </div>
 
