--- a/src/main/resources/templates/update_mini_project.html
+++ b/src/main/resources/templates/update_mini_project.html
@@ -18,7 +18,7 @@
 			<input class="form-input" type="text" th:field="${mini_project.mini_project_title}"><br>
 			<span class="form-title">ユーザー</span>
 			<input type="radio" th:field="${mini_project.user_id}" th:value="1" th:text="user">
-			<input type="radio" th:field="${mini_project.user_id}" th:value="2" th:text="user1">
+			<input type="radio" th:field="${mini_project.user_id}" th:value="2" th:text="nobuyuki">
 		 	<input type="hidden" th:field="${mini_project.project_id}" th:value="${project_id}">
 		 	<input type="hidden" th:field="${mini_project.id}" th:value="${id}">
 			<input class="form-input submit-button" type="submit" value="追加">
